_sass/jekyll-theme-hacker.scss
@import "rouge-base16-dark";
@import "default_colors";
@import "svg-icons";

$body-background: $cod-grey !default;
$body-foreground: $gallery !default;
$header: $conifer !default;
$blockquote-color: $silver-chalice !default;
$blockquote-border: $dove-grey !default;
$container-max-width: 1000px;

@mixin media-max-width($max-width) {
  @media (max-width: $max-width) {
    @content;
  }
}

body {
  margin: 0;
  padding: 0;
  background: $body-background url("../images/bkg.png") 0 0;
  color: $body-foreground;
  font-size: 16px;
  line-height: 1.5;
  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
}

/* General & 'Reset' Stuff */

.container {
  width: 90%;
  max-width: $container-max-width;
  margin: 0 auto;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0 0 20px;
}

li {
  line-height: 1.4;
}

/* Header, <header>
   header   - container
   h1       - project name
   h2       - project description
*/

header {
  background: rgba(0, 0, 0, 0.1);
  width: 100%;
  border-bottom: 1px dashed $conifer; //header;
  padding: 20px 0;
  margin: 0 0 40px 0;
}

header h1 {
  font-size: 30px;
  line-height: 1.5;
  margin: 0 0 0 -40px;
  font-weight: bold;
  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
  color: $conifer; //$header;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
    0 0 5px rgba(181, 232, 83, 0.1),
    0 0 10px rgba(181, 232, 83, 0.1);
  letter-spacing: -1px;
  -webkit-font-smoothing: antialiased;

  @include media-max-width($container-max-width) {
    margin-left: 0;
  }
}

header h1:before {
  content: "./ ";
  font-size: 24px;
}

header h2 {
  font-size: 18px;
  font-weight: 300;
  color: $dove-grey;
}

nav {
  display: flex;
  justify-content: left;
  flex-wrap: wrap;
  gap: 10px;
  margin: 0 0 20px 0;
}

.smaller {
  font-size: 0.875em;
}

/* Main Content
*/

main {
  width: 100%;
  -webkit-font-smoothing: antialiased;
}

main img {
  max-width: 100%
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: normal;
  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
  color: $header;
  letter-spacing: -0.03em;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
    0 0 5px rgba(181, 232, 83, 0.1),
    0 0 10px rgba(181, 232, 83, 0.1);
}

main h1 {
  font-size: 30px;
}

main h2 {
  font-size: 24px;
}

main h3 {
  font-size: 18px;
}

main h4 {
  font-size: 14px;
}

main h5 {
  font-size: 12px;
  text-transform: uppercase;
  margin: 0 0 5px 0;
}

main h6 {
  font-size: 12px;
  text-transform: uppercase;
  color: $light-grey;
  margin: 0 0 5px 0;
}

dt {
  font-style: italic;
  font-weight: bold;
}

ul li {
  list-style-image: url('../images/bullet.png');
}

blockquote {
  color: $blockquote-color;
  padding-left: 10px;
  border-left: 1px dotted $blockquote-border;
}

pre {
  background: rgba(0, 0, 0, 0.9);
  border: 1px solid rgba(255, 255, 255, 0.15);
  padding: 10px;
  font-size: 16px;
  color: $conifer;
  border-radius: 2px;
  word-wrap: normal;
  overflow: auto;
  overflow-y: hidden;
}

code.highlighter-rouge {
  background: rgba(0, 0, 0, 0.9);
  border: 1px solid rgba(255, 255, 255, 0.15);
  padding: 0px 3px;
  margin: 0px -3px;
  color: $bouquet;
  border-radius: 2px;
}

table {
  width: 100%;
  margin: 0 0 20px 0;
}

th {
  text-align: left;
  border-bottom: 1px dashed $conifer;
  padding: 5px 10px;
}

td {
  padding: 5px 10px;
}

hr {
  height: 0;
  border: 0;
  border-bottom: 1px dashed $conifer;
  color: $conifer;
}

/* Buttons
*/

.btn {
  display: inline-block;
  background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.3), rgba(35, 35, 35, 0.3) 50%, rgba(10, 10, 10, 0.3) 50%, rgba(0, 0, 0, 0.3));
  padding: 8px 18px;
  border-radius: 50px;
  border: 2px solid rgba(0, 0, 0, 0.7);
  border-bottom: 2px solid rgba(0, 0, 0, 0.7);
  border-top: 2px solid rgba(0, 0, 0, 1);
  color: rgba(255, 255, 255, 0.8);
  font-family: Helvetica, Arial, sans-serif;
  font-weight: bold;
  font-size: 13px;
  text-decoration: none;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
}

.btn:hover {
  background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.6), rgba(35, 35, 35, 0.6) 50%, rgba(10, 10, 10, 0.8) 50%, rgba(0, 0, 0, 0.8));
}

.btn .icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: sub;
  margin-right: 8px;
}

.btn-github .icon {
  opacity: 0.6;
  background: url("../images/blacktocat.png") 0 0 no-repeat;
}

/* Links
   a, a:hover, a:visited
*/

a {
  color: #63c0f5;
  text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
  outline: none;
  text-decoration: none;
}

main,
footer {

  a:hover,
  a:active {
    text-shadow: 0 0 5px rgba(104, 182, 255, 1.0);
  }

  a.btn:hover,
  a.btn:active {
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
  }
}

header h1 {
  a {
    text-decoration: none;
    color: inherit;
    text-shadow: inherit;
  }

  a:hover {
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3),
      0 0 5px rgba(181, 232, 83, 0.3),
      0 0 10px rgba(181, 232, 83, 0.3);
  }
}

/* Posts and Pages
*/

.post-info {
  margin-bottom: 2em;
}

.post-info span {
  font-weight: normal;
  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
  color: $conifer;
  letter-spacing: -0.03em;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
    0 0 5px rgba(181, 232, 83, 0.1),
    0 0 10px rgba(181, 232, 83, 0.1);
}

.comments {
  margin-top: 1.8em;
}

.posts>.post {
  padding-bottom: 2em;
  margin-bottom: 1.8em;
  border-bottom: 1px dashed $conifer;
}

.posts>.post:last-child {
  padding-bottom: 1em;
  border-bottom: none;
}

.post {
  .post-footer {
    text-align: right;
  }

  .read-more {
    text-transform: uppercase;
    margin-left: 15px;
  }
}

.header-container {
  display: flex;
  justify-content: space-between;
}

.improve {
  font-size: 14px;
  white-space: nowrap;
  margin-left: 1.5rem;

  a {
    color: $light-grey;
  }
}

@media screen and (max-width: 568px) {
  .hide-on-mobiles {
    display: none !important;
  }
}

/* Date and time
*/

time {
  color: $dove-grey;
}

.post time {
  display: block;
}

time.post-time {
  margin-top: 1em;
}

/* Pagination
*/

.pagination {
  padding-top: 20px;
  text-align: center;
  border-top: 1px dashed $conifer;
  color: $conifer;

  .previous-page {
    margin-right: 2em;
  }

  .next-page {
    margin-left: 2em;
  }
}

/* Footer
*/

footer {
  margin: 3.5rem 0 2rem;
  text-align: center;
}

.copyright {
  color: $dove-grey;
  display: block;
  margin-top: 15px;
  font-size: 14px;
}

.pgp-key {
  font-size: 85%;

  code {
    padding: 2px 4px;
    font-size: 90%;
    color: #c7254e;
    background-color: black;
    border-radius: 4px;
    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  }

  a {
    text-shadow: none;
  }

  a:hover code,
  a:active code {
    text-shadow: 0 0 5px #99092d;
  }
}

/* Feedback form
*/

input[type=text],
input[type=email],
textarea {
  width: 100%;
  max-width: 820px;
  box-sizing: border-box;
  background: rgba(0, 0, 0, 0.9);
  border: 1px solid rgba(255, 255, 255, 0.15);
  padding: 10px;
  font-size: 16px;
  color: $conifer;
  border-radius: 2px;
  resize: none;
  margin-bottom: 6px;
}

input[type=text]:focus,
input[type=email]:focus,
textarea:focus {
  outline: none;
  border: 1px solid $chelsea-cucumber;
}

:not(output):user-invalid {
  border: 1px solid red;
  border-radius: 2px;
  box-shadow: none;
}

.contact-form {
  overflow: hidden;
  max-width: 820px;
  margin: 0 auto;
}

.contact-form textarea {
  height: 150px;
}

.contact-form .submit-btn-align {
  text-align: right;
}

#itsatrap {
  display: none;
}

.thankyou-message {
  display: none;
}

/* Resume */

.remove-bottom-margin {
  margin-bottom: 0;
}

.resume-btn {
  margin-top: -0.3rem;
  margin-bottom: -1.2rem;
  text-align: right;
}

@media screen and (max-width: 568px) {
  .resume-btn {
    margin-top: -3.8rem;
    margin-bottom: 2.3rem;
  }
}

/* Clearfix */

#a-title {
  text-decoration: none;
}

/* Tags and categories */

.tags h2,
.categories h2 {
  margin-top: 1.6em;
}

